<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LinePro</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    ]<string name="register">Register</string>
    <string name="forgot">Forgot your Password?</string>
    <string name="pick_image_intent_text">Choose an image</string>

    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>

    <string name="crop__done">DONE</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">CANCEL</string>

</resources>
